<resources>
    <string name="app_name">RavelUp</string>
    <string name="login_loginPage">Login</string>
    <string name="mot_de_passe_loginPage">Mot de passe</string>
    <string name="connexionBouton_LoginPage">Connexion</string>
    <string name="login_activity_title_text">Inscription</string>
    <string name="mot_de_passe_inscriptionPage">Mot de passe</string>
    <string name="email_inscriptionPage">Email</string>
    <string name="inscriptionBouton_InscriptionPage">Inscription</string>
    <string name="datePicker_InscriptionPage">Date de naissance</string>
    <string name="carteBouton_MenuPage">Carte</string>
    <string name="ravelBouton_MenuPage">Ravel</string>
    <string name="titre_MenuCartePage">Choisis la/les categorie(s)</string>
    <string name="categorie1_mapMenuPage">Catégorie1</string>
    <string name="categorie2_mapMenuPage">Catégorie2</string>
    <string name="rayon_mapMenuPage">Rayon :</string>
    <string name="aller_la_carte_mapMenuPage">Aller à la carte</string>
    <string name="ravel_MainMenuPage">Ravel</string>
    <string name="carte_MainMenuPage">Carte</string>
    <string name="login_LoginPage">Login</string>
    <string name="mot_de_passe_LoginPage">Mot de passe</string>
    <string name="sign_up_activity_login_text">Login</string>
    <string name="connexion_RedirectPage">Connexion</string>
    <string name="inscription_RedirectPage">Inscription</string>
    <string name="main_redirect_ravel_text">Ravel</string>
    <string name="main_redirect_maps_text">Carte</string>
    <string name="title_activity_map">Map</string>
    <string name="titre_QrCodePage">Scanner votre QR Code :</string>
    <string name="QR_code_reader_QRCodePage">Scannez le QR Code</string>
    <string name="description_title_descrptionPage">Description de :</string>
    <string name="ride_title_descriptionPage">Nos Balades Conseillées</string>
    <string name="login_signUpPage">Login</string>
    <string name="mot_de_passe_signUpPage">Mot de passe</string>
    <string name="email_signUpPage">Email</string>
    <string name="confirmer_votre_mot_de_passe_signUpPage">Confirmer votre mot de passe</string>
    <string name="confirmez_votre_mot_de_passe_signUpPage">Confirmez votre mot de passe</string>
    <string name="d_j_venu_connectez_vous_ici">Déjà venu ? Connectez vous ici</string>
    <string name="nouveau_ici_inscrivez_vous_ici">Nouveau ici ? Inscrivez vous ici</string>
    <string name="ravelup">RavelUp</string>
    <string name="login_signUpActivity">Login</string>
    <string name="mot_de_passe_signUpActivity">Mot de passe</string>
    <string name="confirmez_votre_mot_de_passe_signUpActivity">Confirmez votre mot de passe</string>
    <string name="email_signUpActivity">email</string>
    <string name="date_de_naissance_signUpActivity">Cliquez pour selectionnez votre date de naissance</string>
    <string name="inscription_signUpActivity">Inscription</string>
    <string name="descriptionRavel_mainMenuActivity">Infos sur le point d\'interêt et balades aux alentours</string>
    <string name="descriptionCarte_mainMenuActivity">Infos sur les points d\'interêt aux alentours</string>
    <string name="titre_mainMenuActivity">RavelUp</string>
    <string name="annee_SignUpActivity">Année</string>
    <string name="mois_SignUpActivity">Mois</string>
    <string name="jour_SignUpActivity">Jour</string>
    <string name="date_de_naissance_SignUpActivity">Date de naissance:</string>
    <string name="help_for_password">help for password</string>
    <string name="help_for_birthdate">help for birthdate</string>
    <string name="title_activity_ravel_map">Map</string>
    <string name="title_infowindow" />
    <string name="description_infowindow" />
    <string name="image_du_points_d_interet">image du points d\'interet</string>
    <string name="regex"><![CDATA[(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)(?=.*[@$!%_\\-*?&])[A-Za-z\\d@$!%_\\-*?&]{8,}]]></string>
    <string name="email_regex">^[_A-z0-9-]+(\\.[_A-z0-9-]+)*@[A-z0-9-]+(\\.[a-z0-9-]+)+$</string>
</resources>
